ChangeLog -- Edit History for GPC, the GNU Pascal Compiler, since version 2.1
=============================================================================
2007-09-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* utils/gpidump.pas: Skip version check for 4.x backends.

2007-09-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Bump version.

2007-09-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
            Frank Heckenbach  <frank@pascal.gnu.de>

	* diffs/*: Update diffs.
          config.lang.in: Adjust.

2007-09-03  Frank Heckenbach  <frank@pascal.gnu.de>

	* statements.c: assign_string2(): Save the whole string
          before copying (to prevent multiple evaluation).

2007-09-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* expressions.c: convert_and_check(): For range checking
          convert enumerations to integers.

2007-09-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* declarations.c: declare_variables(): when initializing 
          local static variables explicitly check for nested
          functions.

2007-09-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* types.c: count_unsigned_bits(): For non-constants use
	  counts_bits on type (fixes range2.pas and chuck6.pas).

2007-09-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* predef.c: build_predef_call(): pass 2 as nonconvert to
          build_unary_op to allow function values as copy source.

2007-08-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* plant.c: plant_continue_loop(), plant_exit_loop(): Do not
          ICE, just signal error when outside a loop.

2007-08-31  Adriaan van Os  <gpc@microbizz.nl>

	* rts/Makefile.in: Add support for building libgpc as Mach
          shared library.

2007-08-31  Frank Heckenbach  <frank@pascal.gnu.de>

	* rts/init.pas: Mark GPC_Initialize as user routine.
	* rts/error.pas: Rename Finalize to GPC_Finalize. Mark it
          as user routine.

2007-08-31  Frank Heckenbach  <frank@pascal.gnu.de>
